fix: resolve white space in the container

--- a/assets/css/sections/product-section.css
+++ b/assets/css/sections/product-section.css
@@ -56,4 +56,8 @@
   .product-control-next {
     right: -72px;
   }
+
+  .product-track {
+    padding-right: 0;
+  }
 }
